Made NHS logo responsive

--- a/is_homepage/static/css/wagtail_admin.css
+++ b/is_homepage/static/css/wagtail_admin.css
@@ -15,5 +15,7 @@
 
 .admin-nhs-logo {
   background-color: var(--w-color-primary-200);
-  padding: 9px 9px 2px;
+  /* padding: 9px 9px 2px; */
+  padding: 4.5% 4.5% 1%;
+  margin: 0 20.5%;
 }
